--- a/index.html
+++ b/index.html
@@ -2,31 +2,42 @@
 <html>
     <head>
         <title> CSCE 190: Matthew McGovern</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Matthew McGovern's CSCE 190 Site</h1>
 
         <!-- Problem Statement Assignment -->
         <section class="assignment">
-            <a href="Problem Statement-1.jpg"><img src="Problem Statement-1.jpg"></a>
+            <a href="files/CSCE190 Problem Statement.pdf"><img src="images/CSCE190Probstatement.png"></a>
             <section class="ass-details">
-                <a href="Problem Statement-1.jpg"><h2>Problem Statement: Carpool</h2></a>
+                <a href="files/CSCE190 Problem Statement.pdf"><h2>Problem Statement: Carpool</h2></a>
+                <p>
+                        Design an app that allows college students to connect with other college student in order to find transportation on campus and around campus.
+                </p>
+            </section>
+        </section>
+
+        <!-- Affinity Diagram Assignment -->
+        <section class="assignment">
+            <a href="files/Affinity Diagram.pdf"><img src="images/CSCE190Affinity.png"></a>
+            <section class="ass-details">
+                <a href="files/Affinity Diagram.pdf"><h2>Affinity Diagram: Carpool</h2></a>
                     <p>
-                        Design an app that allows college students to connect with other college student in order to
-find transportation on campus and around campus.
+                        This diagram shows the different aspects of the app that my group and I thought of.
                     </p>
 
                 </h2>
             </section>
         </section>
 
-        <!-- Affinity Diagram Assignment -->
-        <section class="assignment">
-            <a href="College-Carpool.jpg"><img src="College-Carpool.jpg"></a>
+         <!-- Persona Assignment -->
+         <section class="assignment">
+            <a href="files/Persona.pdf"><img src="images/Persona.png"></a>
             <section class="ass-details">
-                <a href="College-Carpool.jpg"><h2>Affinity Diagram: Carpool</h2></a>
+                <a href="files/Persona.pdf"><h2>Personna: Emily Watts</h2></a>
                     <p>
-                        This diagram shows the different aspects of the app that my group and I thought of.
+                        This is the personna of a typical college student who would use our app.
                     </p>
 
                 </h2>
