--- a/index.html
+++ b/index.html
@@ -44,4 +44,18 @@
             </section>
         </section>
     </body>
+
+        <!-- Story Board Assignment -->
+        <section class="assignment">
+            <a href="files/McGovern CSCE190 Storyboard.pdf"><img src="images/McGovern Storyboard.png"></a>
+            <section class="ass-details">
+                 <a href="files/McGovern CSCE190 Storyboard.pdf"><h2>Personna: Emily Watts</h2></a>
+                    <p>
+                        This is a possible situation an ordinary college student could be in.
+                    </p>
+
+                </h2>
+            </section>
+        </section>
+    </body>
 </html>
