--- a/index.html
+++ b/index.html
@@ -7,55 +7,97 @@
     <body>
         <h1>Matthew McGovern's CSCE 190 Site</h1>
 
-        <!-- Problem Statement Assignment -->
-        <section class="assignment">
-            <a href="files/CSCE190 Problem Statement.pdf"><img src="images/CSCE190Probstatement.png"></a>
-            <section class="ass-details">
-                <a href="files/CSCE190 Problem Statement.pdf"><h2>Problem Statement: Carpool</h2></a>
-                <p>
-                        Design an app that allows college students to connect with other college student in order to find transportation on campus and around campus.
-                </p>
-            </section>
-        </section>
+        <div class="assignments">
+                <!-- Problem Statement Assignment -->
+                <section class="assignment">
+                    <a href="files/CSCE190 Problem Statement.pdf"><img src="images/CSCE190Probstatement.png"></a>
+                    <section class="ass-details">
+                        <a href="files/CSCE190 Problem Statement.pdf"><h2>Problem Statement: Carpool</h2></a>
+                        <p>
+                                Design an app that allows college students to connect with other college student in order to find transportation on campus and around campus.
+                        </p>
+                    </section>
+                </section>
 
-        <!-- Affinity Diagram Assignment -->
-        <section class="assignment">
-            <a href="files/Affinity Diagram.pdf"><img src="images/CSCE190Affinity.png"></a>
-            <section class="ass-details">
-                <a href="files/Affinity Diagram.pdf"><h2>Affinity Diagram: Carpool</h2></a>
-                    <p>
-                        This diagram shows the different aspects of the app that my group and I thought of.
-                    </p>
+                <!-- Affinity Diagram Assignment -->
+                <section class="assignment">
+                    <a href="files/Affinity Diagram.pdf"><img src="images/CSCE190Affinity.png"></a>
+                    <section class="ass-details">
+                        <a href="files/Affinity Diagram.pdf"><h2>Affinity Diagram: Carpool</h2></a>
+                            <p>
+                                This diagram shows the different aspects of the app that my group and I thought of.
+                            </p>
 
-                </h2>
-            </section>
-        </section>
+                        </h2>
+                    </section>
+                </section>
 
-         <!-- Persona Assignment -->
-         <section class="assignment">
-            <a href="files/Persona.pdf"><img src="images/Persona.png"></a>
-            <section class="ass-details">
-                <a href="files/Persona.pdf"><h2>Personna: Emily Watts</h2></a>
-                    <p>
-                        This is the personna of a typical college student who would use our app.
-                    </p>
+                <!-- Persona Assignment -->
+                <section class="assignment">
+                    <a href="files/Persona.pdf"><img src="images/Persona.png"></a>
+                    <section class="ass-details">
+                        <a href="files/Persona.pdf"><h2>Personna: Emily Watts</h2></a>
+                            <p>
+                                This is the personna of a typical college student who would use our app.
+                            </p>
 
-                </h2>
-            </section>
-        </section>
-    </body>
+                        </h2>
+                    </section>
+                </section>
+            
 
-        <!-- Story Board Assignment -->
-        <section class="assignment">
-            <a href="files/McGovern CSCE190 Storyboard.pdf"><img src="images/McGovern Storyboard.png"></a>
-            <section class="ass-details">
-                 <a href="files/McGovern CSCE190 Storyboard.pdf"><h2>Story Board: Emily Watts</h2></a>
-                    <p>
-                        This is a possible situation an ordinary college student could be in.
-                    </p>
+                <!-- Story Board Assignment -->
+                <section class="assignment">
+                    <a href="files/McGovern CSCE190 Storyboard.pdf"><img src="images/McGovern Storyboard.png"></a>
+                    <section class="ass-details">
+                        <a href="files/McGovern CSCE190 Storyboard.pdf"><h2>Story Board: Emily Watts</h2></a>
+                            <p>
+                                This is a possible situation an ordinary college student could be in.
+                            </p>
 
-                </h2>
-            </section>
-        </section>
+                        </h2>
+                    </section>
+                </section>
+
+                <!-- Sketch Assignment -->
+                <section class="assignment">
+                    <a href="files/GovSketch.pdf"><img src="images/McGovern Sketch.png"></a>
+                    <section class="ass-details">
+                        <a href="files/GovSketch.pdf"><h2>Sketches</h2></a>
+                            <p>
+                                These are possible examples of the College Carpool interface.
+                            </p>
+
+                        </h2>
+                    </section>
+                </section>
+
+                <!-- Paper Prototype Assignment -->
+                <section class="assignment">
+                    <a href="files/GovSketch.pdf"><img src="images/McGovern Sketch.png"></a>
+                    <section class="ass-details">
+                        <a href="files/GovSketch.pdf"><h2>Paper Prototype</h2></a>
+                            <p>
+                                A paper walkthrough of the potential look of every screen in the application.
+                            </p>
+
+                        </h2>
+                    </section>
+                </section>
+
+                <!-- Low-Fi Prototype Assignment -->
+                <section class="assignment">
+                    <a href="files/College Carpool-html/index.html"><img src="images/Prototype.png"></a>
+                    <section class="ass-details">
+                        <a href="files/College Carpool-html/index.html"><h2>Low-Fi Prototype</h2></a>
+                            <p>
+                                A paper walkthrough of the potential look of every screen in the application.
+                            </p>
+
+                        </h2>
+                    </section>
+                </section>
+        </div>        
+
     </body>
 </html>
