--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                 <!-- Paper Prototype Assignment -->
                 <section class="assignment">
-                    <a href="files/GovSketch.pdf"><img src="images/McGovern Sketch.png"></a>
+                    <a href="https://www.youtube.com/watch?v=gSHPMwJpgfo"><img src="https://www.youtube.com/watch?v=gSHPMwJpgfo"></a>
                     <section class="ass-details">
                         <a href="files/GovSketch.pdf"><h2>Paper Prototype</h2></a>
                             <p>
@@ -85,13 +85,13 @@
                     </section>
                 </section>
 
-                <!-- Low-Fi Prototype Assignment -->
+                <!-- Low-fi/High-fi Assignment -->
                 <section class="assignment">
                     <a href="files/College Carpool-html/index.html"><img src="images/Prototype.png"></a>
                     <section class="ass-details">
                         <a href="files/College Carpool-html/index.html"><h2>Low-Fi Prototype</h2></a>
                             <p>
-                                A paper walkthrough of the potential look of every screen in the application.
+                                A walkthrough of every screen in the application.
                             </p>
 
                         </h2>
