--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
 
                 <!-- Paper Prototype Assignment -->
                 <section class="assignment">
-                    <a href="https://www.youtube.com/watch?v=gSHPMwJpgfo"><img src="https://www.youtube.com/watch?v=gSHPMwJpgfo"></a>
+                    <a href="https://www.youtube.com/watch?v=gSHPMwJpgfo"><img src="images/paper-prototype.png"></a>
                     <section class="ass-details">
-                        <a href="files/GovSketch.pdf"><h2>Paper Prototype</h2></a>
+                        <a href="https://www.youtube.com/watch?v=gSHPMwJpgfo"><h2>Paper Prototype</h2></a>
                             <p>
                                 A paper walkthrough of the potential look of every screen in the application.
                             </p>
