--- a/index.html
+++ b/index.html
@@ -59,6 +59,19 @@
                     </section>
                 </section>
 
+                <!-- Team Story Board Assignment -->
+                <section class="assignment">
+                    <a href="files/Storyboard All.pdf"><img src="images/teamstory.png"></a>
+                    <section class="ass-details">
+                        <a href="files/Storyboard All.pdf"><h2>Story Board: Team Stories</h2></a>
+                            <p>
+                                These are possible situations ordinary college studets would be in.
+                            </p>
+
+                        </h2>
+                    </section>
+                </section>
+
                 <!-- Sketch Assignment -->
                 <section class="assignment">
                     <a href="files/GovSketch.pdf"><img src="images/McGovern Sketch.png"></a>
@@ -66,6 +79,19 @@
                         <a href="files/GovSketch.pdf"><h2>Sketches</h2></a>
                             <p>
                                 These are possible examples of the College Carpool interface.
+                            </p>
+
+                        </h2>
+                    </section>
+                </section>
+
+                <!-- Team Sketch Assignment -->
+                <section class="assignment">
+                    <a href="files/combinepdf(2).pdf"><img src="images/teamsketch.png"></a>
+                    <section class="ass-details">
+                        <a href="files/combinepdf(2).pdf"><h2>Team Sketches</h2></a>
+                            <p>
+                                Sketches of the interface of the app made by my team and I.
                             </p>
 
                         </h2>
@@ -85,13 +111,26 @@
                     </section>
                 </section>
 
-                <!-- Low-fi/High-fi Assignment -->
+                <!-- Low-fi and High-fi Assignment -->
                 <section class="assignment">
                     <a href="files/College Carpool-html/index.html"><img src="images/Prototype.png"></a>
                     <section class="ass-details">
-                        <a href="files/College Carpool-html/index.html"><h2>Low-Fi Prototype</h2></a>
+                        <a href="files/College Carpool-html/index.html"><h2>Low-Fi/High-Fi Prototype</h2></a>
                             <p>
                                 A walkthrough of every screen in the application.
+                            </p>
+
+                        </h2>
+                    </section>
+                </section>
+
+                <!-- Final Presentation Assignment -->
+                <section class="assignment">
+                    <a href=""><img src=""></a>
+                    <section class="ass-details">
+                        <a href=""><h2>Final Presentation</h2></a>
+                            <p>
+                                
                             </p>
 
                         </h2>
